# freedbd

./: README.md
src/: Makefile.am  Makefile.in  NEWS  README  configure  configure.in
src/examples/: Makefile.am  Makefile.in  sample_db.txt  sample_db.xml
src/src/: Makefile.am  Makefile.in  config.h  conn.c  conn.h  db.c  db.h  db_txt.c  db_xml.c  freedbd.c  options.h.in  server.c  server.h  util.c  util.h
src/tools/: Makefile.am  Makefile.in  db_parse.pl  txt2xml.pl
